--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -72,6 +72,10 @@
 
   /* Base Font Size */
   --base-font-size: 8px;
+
+  @media (max-width: 400px) {
+    --base-font-size: 7px;
+  }
 }
 
 *,
